parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-19.snap
---
source: parser/src/lexer/mod.rs
description: "0xD"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xD",
        ),
        start: 0,
        end: 3,
    },
]
