parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-20.snap
---
source: parser/src/lexer/mod.rs
description: "0xE"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xE",
        ),
        start: 0,
        end: 3,
    },
]
