parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-21.snap
---
source: parser/src/lexer/mod.rs
description: "0xF"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xF",
        ),
        start: 0,
        end: 3,
    },
]
