parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-3.snap
---
source: parser/src/lexer/mod.rs
description: "0x3"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x3",
        ),
        start: 0,
        end: 3,
    },
]
