parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-4.snap
---
source: parser/src/lexer/lexer.rs
description: "0x4"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x4",
        ),
        start: 0,
        end: 3,
    },
]
