parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-5.snap
---
source: parser/src/lexer/lexer.rs
description: "0x5"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x5",
        ),
        start: 0,
        end: 3,
    },
]
