parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-6.snap
---
source: parser/src/lexer/mod.rs
description: "0x6"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x6",
        ),
        start: 0,
        end: 3,
    },
]
