parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-7.snap
---
source: parser/src/lexer/mod.rs
description: "0x7"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x7",
        ),
        start: 0,
        end: 3,
    },
]
