parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-8.snap
---
source: parser/src/lexer/mod.rs
description: "0x8"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x8",
        ),
        start: 0,
        end: 3,
    },
]
