parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__numeric-hexadecimal-9.snap
---
source: parser/src/lexer/mod.rs
description: "0x9"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x9",
        ),
        start: 0,
        end: 3,
    },
]
